<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WebView App</string>
    <string name="home_url">https://cn.bing.com/</string>
    <!-- 底部导航 -->
    <string name="nav_right">前进</string>
    <string name="nav_left">后退</string>
    <string name="nav_set">设置</string>
    <string name="nav_save">保存</string>
    <string name="nav_home">主页</string>

    <string name="input_url">搜索或输入网址</string>
    <string name="computer">计算机</string>
    <string name="finaicial">金融</string>
    <string name="manage">管理</string>
    <string name="fullscreenoff">全屏模式OFF</string>
    <string name="fullscrennon">全屏模式ON</string>
    <string name="nopicoff">无图模式OFF</string>
    <string name="nopicon">无图模式ON</string>
    <string name="pop_exit">退出</string>
    <string name="fav">收藏夹</string>
    <string name="his">历史记录</string>
    <string name="add_to_fav">添加到收藏夹</string>
    <string name="full_screen_exit">退出全屏</string>
    <string name="favicon">favicon</string>
    <string name="refresh">refresh</string>
    <string name="full_screen">全屏</string>
    <string name="save">保存</string>
    <string name="landscape">仅限横屏浏览</string>
    <string name="vertical_screen">仅限竖浏览</string>
    <string name="vertical">仅限竖屏浏览</string>
</resources>
